k8s/kind/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-starter-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: nodee
        image: gcr.io/septapig/nodestarter:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
