k8s/kind/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: node
